<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chaitanya.hostelautomation.MainActivity">

    <Switch
        android:text="@string/coridor_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/switch1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:text="@string/water_motor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/switch2"
        android:layout_below="@+id/switch1"
        android:layout_alignStart="@+id/switch1"
        android:layout_alignParentEnd="true" />

    <Switch
        android:text="@string/camera_streaming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/switch3"
        android:layout_below="@+id/switch2"
        android:layout_alignStart="@+id/switch2"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="52dp"
        android:id="@+id/editText"
        android:hint="@string/raspberry_pi_ip_address"
        android:inputType="textPersonName"
        android:layout_below="@+id/switch3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="41dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/port_number"
        android:layout_alignTop="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="71dp" />

    <Button
        android:text="@string/setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp" />
</RelativeLayout>
